# openGL_Project

./: CMakeLists.txt  glad.c  glad.h  main.cpp
.cache/clangd/index/: _fixes.hpp.228B1206F60E7A8A.idx  _vectorize.hpp.C665DDE9C28703EC.idx  common.hpp.14C068BE6EC986A9.idx  compute_common.hpp.A9115C3392AA5261.idx  compute_vector_decl.hpp.A78C91D826E55123.idx  compute_vector_relational.hpp.6D390FF3F5A7A723.idx  constants.hpp.06511FA972F13464.idx  constants.inl.963E8E97CDCE25B2.idx  dual_quaternion.hpp.A146204D48F6D2FB.idx  dual_quaternion.inl.8C6989F12A30BDF6.idx  epsilon.hpp.969F1C8DC5D7560A.idx  epsilon.inl.D7E4C38749625EF9.idx  exponential.hpp.D96AFA7E8693C794.idx  func_common.inl.5C9EA77486881499.idx  func_exponential.inl.9DA341D9AC28D876.idx  func_geometric.inl.05981AFF48318B6B.idx  func_integer.inl.8BC89E9524AFA0EA.idx  func_matrix.inl.00BE4D9B3131B40B.idx  func_packing.inl.93EE42FC86FBFB5A.idx  func_trigonometric.inl.FFE2522F6C673E30.idx  func_vector_relational.inl.92A45F31B66986E1.idx  fwd.hpp.F12DB1DFE2B37935.idx  geometric.hpp.A174E07F39AAA0B8.idx  glad.c.D6B2AE6017C49670.idx  glad.h.D78E29757D1510ED.idx  glm.cpp.4D4A04112BDDF1C9.idx  glm.hpp.178D5E9D25CDF96E.idx  integer.hpp.3AF2812961C37C6E.idx  khrplatform.h.D42F4BCA498AFFF0.idx  linmath.h.DE88EEB614E5C01E.idx  main.cpp.A964C4F15417BB45.idx  mat2x2.hpp.D072A1CB84C6664C.idx  mat2x3.hpp.A9930A00F0A4FEC9.idx  mat2x4.hpp.E3ECE81302D0C914.idx  mat3x2.hpp.CC84EA4D6FD4C358.idx  mat3x3.hpp.5592A85F4291ACF5.idx  mat3x4.hpp.E8D2776E797F1D51.idx  mat4x2.hpp.7411EF1E3BDA850F.idx  mat4x3.hpp.AA9167A71E188717.idx  (+151 more)
